# Elite-Dangerous-AI-Integration

./: .gitignore  AIActions.py  AIGUI.py  AIGUI.spec  CONTRIBUTING.md  Chat.py  Chat.spec  ControllerManager.py  Dockerfile.aiserver  Dockerfile.cpu  Dockerfile.nv  EDAII.bat  EDAIIInstaller.bat  EDJournal.py  EDKeys.py  EDlogger.py  Event.py  EventManager.py  LICENSE  Llama-3.2_unsloth_finetuning.ipynb  Logger.py  PLUGIN_DEVELOPMENT.md  PromptGenerator.py  README.md.backup  README_VR_ADDITION.md  STT.py  StatusParser.py  TTS.py  Voice.py  build.ps1  com.covas-next.ui.yml  com.covas-next.yml  com.covasnext.ui.yml  covas.db-journal  fly.toml  mkdocs.yml  package-lock.json  package.json  pyrightconfig.json  pytest.ini  (+3 more)
docs/: .site  05_first_steps.md  10_faq.md  20_actions.md  25_reactions.md  30_description.md  40_TTSVoices.md  40_edgeTTSVoices.md  50_EDCoPilot.md  55_contributing.md  60_support.md  70_credits.md  _config.yml  actions.md  aiToolList.md  data-policy.html  description.md  edgeTTSVoices.md  freeSetup.md  index.md  keybindings.md  support.md  troubleshooting.html  troubleshooting.yaml
e2e/: build.ps1  build.sh  test_ChatExecutable.py
electron/: index.js  package-lock.json  package.json  preload.js
plugins/: HelloWorld.py
shared-memory-addon/: binding.gyp
src/: AIGUI.py  AIServer.py  BuildEventModels.py  Chat.py  CheckKeycodes.py  TestRun.py
vr-overlay-sharedmem/: CMakeLists.txt  New Text Document.txt  test_writer.cjs
vr-overlay-sharedmem/shared-memory-addon/: index.js  package-lock.json  package.json
vr-overlay-sharedmem/src/: main.cpp
(+517 files in other folders)
